# SPG

./: .gitignore  pyproject.toml
spg/: __init__.py  main.py  pyinstaller.py
spg/Calculate/: MER.py  Picking.py  Reader  STA_LTA.py  Trigger.py  __init__.py
spg/Calculate/Preprocessing/: __init__.py  preproc.py
spg/Tomography/: __init__.py
spg/UI/: __init__.py
spg/UI/MainWidget/: __init__.py  main_widget_ui.py  main_widget_ui.ui
