[tool.poetry]
name = "spg"
version = "0.1.0"
description = ""
authors = ["gasng <kamashev41@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyside6 = "^6.8.0.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pyinstaller = "^6.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
SPG = 'spg.main:main'
build = 'spg.pyinstaller:install'
